# heis_prosjekt

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  Jenkinsfile  Makefile  README.md  build.sh
Docker/: Dockerfile
docs/: Sekvensdiagram.txt  intro.dox
inc/: queue.h  test_lib.h
src/: fsm.c  fsm.h  io.c  light_handler.c  light_handler.h  logger.c  logger.h  main.c  queue.c  queueHandler.c  queueHandler.h  queue_handler.c  queue_handler.h  queue_test.c  test_lib.c
tests/: Makefile  dummy.c  elev.c  elev.h  fsm_tests.c  test_logger.c  test_queue.c
