cmake_minimum_required(VERSION 3.12)
project(heis_prosjekt C)

set(CMAKE_C_STANDARD 11)

include_directories(src)
include_directories(Unity/examples)
include_directories(Unity/examples/example_1/src)
include_directories(Unity/examples/example_2/src)
include_directories(Unity/examples/example_3/helper)
include_directories(Unity/examples/example_3/src)
include_directories(Unity/extras/fixture/src)
include_directories(Unity/extras/fixture/test)
include_directories(Unity/src)
include_directories(Unity/test/expectdata)
include_directories(Unity/test/testdata)

add_executable(heis_prosjekt
        src/channels.h
        src/elev.c
        src/elev.h
        src/io.c
        src/io.h
        src/main.c
        Unity/examples/example_1/src/ProductionCode.c
        Unity/examples/example_1/src/ProductionCode.h
        Unity/examples/example_1/src/ProductionCode2.c
        Unity/examples/example_1/src/ProductionCode2.h
        Unity/examples/example_1/test/test_runners/TestProductionCode2_Runner.c
        Unity/examples/example_1/test/test_runners/TestProductionCode_Runner.c
        Unity/examples/example_1/test/TestProductionCode.c
        Unity/examples/example_1/test/TestProductionCode2.c
        Unity/examples/example_2/src/ProductionCode.c
        Unity/examples/example_2/src/ProductionCode.h
        Unity/examples/example_2/src/ProductionCode2.c
        Unity/examples/example_2/src/ProductionCode2.h
        Unity/examples/example_2/test/test_runners/all_tests.c
        Unity/examples/example_2/test/test_runners/TestProductionCode2_Runner.c
        Unity/examples/example_2/test/test_runners/TestProductionCode_Runner.c
        Unity/examples/example_2/test/TestProductionCode.c
        Unity/examples/example_2/test/TestProductionCode2.c
        Unity/examples/example_3/helper/UnityHelper.c
        Unity/examples/example_3/helper/UnityHelper.h
        Unity/examples/example_3/src/ProductionCode.c
        Unity/examples/example_3/src/ProductionCode.h
        Unity/examples/example_3/src/ProductionCode2.c
        Unity/examples/example_3/src/ProductionCode2.h
        Unity/examples/example_3/test/TestProductionCode.c
        Unity/examples/example_3/test/TestProductionCode2.c
        Unity/examples/unity_config.h
        Unity/extras/fixture/src/unity_fixture.c
        Unity/extras/fixture/src/unity_fixture.h
        Unity/extras/fixture/src/unity_fixture_internals.h
        Unity/extras/fixture/src/unity_fixture_malloc_overrides.h
        Unity/extras/fixture/test/main/AllTests.c
        Unity/extras/fixture/test/template_fixture_tests.c
        Unity/extras/fixture/test/unity_fixture_Test.c
        Unity/extras/fixture/test/unity_fixture_TestRunner.c
        Unity/extras/fixture/test/unity_output_Spy.c
        Unity/extras/fixture/test/unity_output_Spy.h
        Unity/src/unity.c
        Unity/src/unity.h
        Unity/src/unity_internals.h
        Unity/test/expectdata/testsample_cmd.c
        Unity/test/expectdata/testsample_def.c
        Unity/test/expectdata/testsample_head1.c
        Unity/test/expectdata/testsample_head1.h
        Unity/test/expectdata/testsample_mock_cmd.c
        Unity/test/expectdata/testsample_mock_def.c
        Unity/test/expectdata/testsample_mock_head1.c
        Unity/test/expectdata/testsample_mock_head1.h
        Unity/test/expectdata/testsample_mock_new1.c
        Unity/test/expectdata/testsample_mock_new2.c
        Unity/test/expectdata/testsample_mock_param.c
        Unity/test/expectdata/testsample_mock_run1.c
        Unity/test/expectdata/testsample_mock_run2.c
        Unity/test/expectdata/testsample_mock_yaml.c
        Unity/test/expectdata/testsample_new1.c
        Unity/test/expectdata/testsample_new2.c
        Unity/test/expectdata/testsample_param.c
        Unity/test/expectdata/testsample_run1.c
        Unity/test/expectdata/testsample_run2.c
        Unity/test/expectdata/testsample_yaml.c
        Unity/test/testdata/CException.h
        Unity/test/testdata/cmock.h
        Unity/test/testdata/Defs.h
        Unity/test/testdata/mockMock.h
        Unity/test/testdata/testRunnerGenerator.c
        Unity/test/testdata/testRunnerGeneratorSmall.c
        Unity/test/testdata/testRunnerGeneratorWithMocks.c
        Unity/test/tests/testparameterized.c
        Unity/test/tests/testunity.c src/queueHandler.c src/queueHandler.h)
